--- a/src/components/TaskFilter/TaskFilter.module.scss
+++ b/src/components/TaskFilter/TaskFilter.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   width: 100%;
   padding: 10px 20px 15px 16px;
-  gap: 20%;
+  gap: 19%;
   align-items: center;
   color: #777;
   background-color: white;
@@ -25,7 +25,7 @@
 
 .filters {
   display: flex;
-  gap: 10px;
+  gap: 5px;
   align-items: center;
   text-align: center;
   list-style: none;
@@ -59,6 +59,7 @@
 
 .counter {
   display: flex;
+  width: 79px;
   gap: 5px;
 }
 
